:sparkles: feat: padronização de código e criação de endpoint para recuperar os produtos com base no id da categoria