@@ -10,8 +10,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Tag(name = "Categoria")
 @RequestMapping("/categoria")
@@ -24,13 +24,12 @@ public class CategoriaController {
     @Autowired
     private CategoriaService categoriaService;
 
-
     @GetMapping
     public ResponseEntity<List<CategoriaDTO>> findAll() {
         List<CategoriaEntity> categoriaEntities = this.categoriaService.findAll();
         List<CategoriaDTO> categoriaDTO = categoriaEntities.stream()
                 .map(categoriaEntity -> modelMapper.map(categoriaEntity, CategoriaDTO.class))
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok().body(categoriaDTO);
     }
 
